{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0b25628a-c02f-4045-be44-cdf2bf6d397c",
            "actions": [
                {
                    "name": "FireEngine",
                    "type": "Button",
                    "id": "9508b2d1-55e1-4b93-9e65-1dece1f94ce6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrustDirection",
                    "type": "Value",
                    "id": "bc43ceb6-7e4a-472b-915e-8e969e76fee7",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AutopilotToggle",
                    "type": "Button",
                    "id": "eca1ef2d-ff0b-4546-b5b8-0fcc5fab3a9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "ba23efa6-1dff-4cd6-99bc-326aaedfa440",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LegsToggle",
                    "type": "Button",
                    "id": "83daa8c3-74c9-4ba4-b245-2cbf2e1470eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ResetSimulation",
                    "type": "Button",
                    "id": "671b86dc-dfc1-4cfc-a244-10aff93d4fb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "acf797e2-2468-4fa3-825d-3f106f8629af",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireEngine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4df7982-0218-4b49-ae61-e4a80b54d186",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f1e0781-ca9f-452e-9e15-345bbbd33279",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutopilotToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eeb98b58-6ba3-456c-a03c-93413a642e3a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df88def5-8bfc-4764-926d-b82a09c32d9d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LegsToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44678f00-eccd-410e-867c-41da75a859a7",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetSimulation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}